Refactor Lab1 to be Lab01 and added Homework01